# rs-reconcile

./: .gitignore  Cargo.toml  README.md  doc-web.sh
examples/fs/fs2fs-json/: Cargo.toml  run.sh
examples/fs/fs2fs-json/sample.d/source.d/cafef00d-dead-beaf-face-864299792458/2024-08-10/: stat.json
examples/fs/fs2fs-json/sample.d/source.d/cafef00d-dead-beaf-face-864299792458/2024-08-11/: stat.json
examples/fs/fs2fs-json/sample.d/source.d/cafef00d-dead-beaf-face-864299792458/2024-08-12/: stat.json
examples/fs/fs2fs-json/sample.d/target.d/cafef00d-dead-beaf-face-864299792458/2024-08-10/: rows.jsonl
examples/fs/fs2fs-json/sample.d/target.d/cafef00d-dead-beaf-face-864299792458/2024-08-11/: rows.jsonl
examples/fs/fs2fs-json/sample.d/target.d/cafef00d-dead-beaf-face-864299792458/2024-08-12/: rows.jsonl
examples/fs/fs2fs-json/src/: main.rs  source.rs  target.rs
src/: compare.rs  count.rs  lib.rs  source.rs  target.rs
src/source/: fs.rs
src/source/fs/: key2path.rs  key2raw.rs  path2raw.rs
