[package]
name = "rs-reconcile"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
unwrap-used = "forbid"

[dependencies.tokio]
version = "1.39.2"
default-features = false
features = [
]

[dependencies.tonic]
version = "0.12"
default-features = false
features = [
  "codegen",
  "prost",
  "transport",
]
